# FossTree

./: .gitignore  README.md  fossil_calibrations.ipynb  fosstree.spec  pyproject.toml  requirements.txt  tree_2_2_01_16_mid.nwk  tree_viewer.ipynb
.github/workflows/: build.yml
docs/: README.md  architecture.md  beast_xml.md  building.md  cli.md  export.md  gui.md  models.md  parser.md  visualization.md
examples/: strategy1.tree
fosstree/: __init__.py  __main__.py
fosstree/models/: __init__.py  tree.py
fosstree/utils/: __init__.py  beast_xml.py  calibration_parser.py  parser.py  writer.py
fosstree/views/: __init__.py  gui.py  tree_plot.py
notebooks/: fossil_calibrations.ipynb  tree_viewer.ipynb
